Adding bulk import feature
